Password forms: updated, styling and functionality.

--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -2,19 +2,7 @@
 
 @import 'settings';
 @import 'components/layout_helpers';
-
-h1,
-h2,
-h3,
-h4,
-h5 {
-  color: inherit;
-  font-weight: $weight-medium;
-}
-
-p {
-  color: inherit;
-}
+@import 'components/typography';
 
 a,
 a img,
