--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -951,3 +951,5 @@ $nuxeo-body-large: 1.25rem;
 $nuxeo-body-small: 0.85rem;
 $nuxeo-body-smaller: 0.7rem;
 $nuxeo-button-default: 0.9rem;
+
+$hover-darken-percentage: 7%;
