--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -2,16 +2,4 @@
 
 @import 'settings';
 @import 'components/layout_helpers';
-
-h1,
-h2,
-h3,
-h4,
-h5 {
-  color: inherit;
-  font-weight: $weight-medium;
-}
-
-p {
-  color: inherit;
-}
+@import 'components/typography';
