Styling: Compressed and consolidated

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,5 +1,7 @@
 @charset 'utf-8';
 
+@import 'legacy/benchmarks';
+@import 'legacy/syntax';
 @import 'settings';
 @import 'components/layout_helpers';
 @import 'components/typography';
