Homepage - Hero image corrected

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,8 +2,8 @@
 <body class="{{ .Site.Params.themeColor }} home">
 {{ partial "header.html" . }}
 
-<div class="is-bg-white is-black" style="background-image: url('/assets/main/home-illustration.svg');background-size: contain;background-repeat: no-repeat;background-position: center;">
-  <div class="row align-center background-for-medium">
+<div class="is-bg-white is-black">
+  <div class="row align-center background-for-medium" style="background-image: url('/images/home-illustration.svg');background-size: contain;background-repeat: no-repeat;background-position: center;">
     <div id="home" class="column space-3 large-10 large-centered">
       <div class="text-center">
         <h2>Nuxeo Performance Benchmarks</h2>
