--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,12 +1,13 @@
 <!-- js -->
-<script src="https://code.jquery.com/jquery-2.2.3.min.js"
+<script defer src="https://code.jquery.com/jquery-2.2.3.min.js"
 integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="
 crossorigin="anonymous"></script>
-<script src="{{ .Site.BaseURL }}js/foundation.min.js"></script>
-<script src="{{ .Site.BaseURL }}js/tabs.js"></script>
+<script defer src="{{ .Site.BaseURL }}js/foundation.min.js"></script>
 {{ if .IsHome }}
-<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js" integrity="sha512-rmZcZsyhe0/MAjquhTgiUcb4d9knaFc7b5xAfju483gbEXTkeJRUMIPk6s3ySZMYUHEcjKbjLjyddGWMrNEvZg==" crossorigin="anonymous"></script>
-<script src="{{ .Site.BaseURL }}js/home.js"></script>
+<script defer src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js" integrity="sha512-rmZcZsyhe0/MAjquhTgiUcb4d9knaFc7b5xAfju483gbEXTkeJRUMIPk6s3ySZMYUHEcjKbjLjyddGWMrNEvZg==" crossorigin="anonymous"></script>
+<script defer src="{{ .Site.BaseURL }}js/home.js"></script>
+{{ else }}
+<script defer src="{{ .Site.BaseURL }}js/tabs.js"></script>
 {{ end }}
 
 <nx-footer {{ if .IsHome }}{{ else }}nolinks{{ end }}></nx-footer>
