--- a/layouts/index.html
+++ b/layouts/index.html
@@ -16,7 +16,7 @@
       <div class="boxes boxes--3">
         <a class="box no-decoration is-bg-purple" href="/milestone/">
             <div class="box__content">
-              <h4>Proven Performance</h4>
+              <h4>Performance Benchmarks for Each Release</h4>
               <p>
                 Nuxeo's hybrid architecture approach (NoSQL or SQL databases) has been validated to accomodate more than one billion documents, yielding impressive results such as the ability to import 30,000+ documents per second.
               </p>
@@ -25,7 +25,7 @@
         </a>
         <a class="box no-decoration is-bg-blue" href="/continuous/">
             <div class="box__content">
-              <h4>Higher Speed Transfers and Strict Security Controls</h4>
+              <h4>CI Updates</h4>
               <p>
                 To combat slower speeds, we built Nuxeo Edge Cache to reduce download times by up to 95% and bandwidth consumption by 90%&mdash;all while keeping your digital assets safe&mdash;even when cached.
               </p>
@@ -34,7 +34,7 @@
         </a>
         <a class="box no-decoration is-bg-aqua" href="/infra/">
             <div class="box__content">
-              <h4>Architected for Future-proof Flexibility</h4>
+              <h4>Infrastructure</h4>
               <p>
                 Choose from many SQL and NoSQL (e.g. MongoDB) database options for storage, and even shard on several databases for even higher throughput. Your search can be configured using SQL-based queries, Elasticsearch, or a combination of both.
               </p>
