--- a/layouts/section/continuous.html
+++ b/layouts/section/continuous.html
@@ -11,7 +11,7 @@
   </div>
 </div>
 
-<div class="row is-bg-grey is-navy paddedt1 blog-section">
+<div class="row is-bg-grey is-black paddedt1 blog-section">
   <div class="small-12 columns">
     <div class="content container">
       {{ partial "benchsuite.html" . }}
