--- a/layouts/custom/single.html
+++ b/layouts/custom/single.html
@@ -15,7 +15,7 @@
   </div>
 </div>
 
-<div class="row align-center is-bg-grey is-navy paddedt1 blog-section">
+<div class="row align-center is-bg-grey is-black paddedt1 blog-section">
   <div class="small-12 medium-10 large-8 columns">
 <div class="content container">
   <div class="post">
