--- a/themes/old_hyde/layouts/_default/list.html
+++ b/themes/old_hyde/layouts/_default/list.html
@@ -3,13 +3,13 @@
 {{ partial "header.html" . }}
 
   <div class="content container">
-    <ul class="posts">
+    <div class="posts">
         {{ range .Data.Pages }}
         <li>
           <span><a href="{{ .Permalink }}">{{ .Title }}</a> <time class="pull-right post-list">{{ .Date.Format "Mon, Jan 2, 2006" }}</time></span>
         </li>
         {{ end }}
-    </ul>
+    </div>
   </div>
 
   {{ partial "footer.html" . }}
