Updated homepage text

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -16,30 +16,30 @@
       <div class="boxes boxes--3">
         <a class="box no-decoration is-bg-purple" href="/milestone/">
             <div class="box__content">
-              <h4>Performance Benchmarks for Each Release</h4>
+              <h4>Milestones</h4>
               <p>
-                Nuxeo's hybrid architecture approach (NoSQL or SQL databases) has been validated to accomodate more than one billion documents, yielding impressive results such as the ability to import 30,000+ documents per second.
+                For each release of the Nuxeo Platform, we run new benchmarks and analyze performance results. You can have a look here at all the results sets from the latest releases.
               </p>
             </div>
-            <div class="more box__content box__content--last">Performance Benchmarks for Each Release</div>
+            <div class="more box__content box__content--last">Milestones Benchmarks</div>
         </a>
         <a class="box no-decoration is-bg-blue" href="/continuous/">
             <div class="box__content">
-              <h4>CI Updates</h4>
+              <h4>Continuous Integration</h4>
               <p>
-                To combat slower speeds, we built Nuxeo Edge Cache to reduce download times by up to 95% and bandwidth consumption by 90%&mdash;all while keeping your digital assets safe&mdash;even when cached.
+                Every week our CI chain runs a benchmark on the master branch with various configurations. Check out our weekly results here.
               </p>
             </div>
-            <div class="more box__content box__content--last">CI Updates</div>
+            <div class="more box__content box__content--last">Continuous Benchmarks</div>
         </a>
         <a class="box no-decoration is-bg-aqua" href="/infra/">
             <div class="box__content">
               <h4>Infrastructure</h4>
               <p>
-                Choose from many SQL and NoSQL (e.g. MongoDB) database options for storage, and even shard on several databases for even higher throughput. Your search can be configured using SQL-based queries, Elasticsearch, or a combination of both.
+                We're transparent about everything. And here you will find our provisioned benchmark infrastructure and the reference benchmarks simulations.
               </p>
             </div>
-            <div class="more box__content box__content--last">Infrastructure</div>
+            <div class="more box__content box__content--last">Benchmarks Infrastructure</div>
         </a>
       </div>
     </div>
